--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Index</title>
 </head>
 <body>
-  <h1>Index Test</h1>
+  <h1>Calculator</h1>
+  <form method="POST" action="/">
+    <input type="text" name="num1" placeholder="Enter Number"></input><br/><br/>
+    <input type="text" name="num2" placeholder="Enter Number"></input><br/><br/>
+    <button type="submit" name="calculate">calculate</button>
+  </form>
 </body>
 </html>
