--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <h1>Calculator</h1>
   <form method="POST" action="/">
-    <input type="text" name="num1" placeholder="Enter Number"></input><br/><br/>
-    <input type="text" name="num2" placeholder="Enter Number"></input><br/><br/>
-    <button type="submit" name="calculate">calculate</button>
+    <label for = "cityName">City Name</label> <br/><br/>
+    <input type="text" name="cityName" id="cityName" placeholder="City Name"></input><br/><br/>
+    <button type="submit" name="">Go</button>
   </form>
 </body>
 </html>
